result/subtask14-forall/testcase01.out
> Create symbol table (scope level 0)
func: mod
> Insert `mod` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `num` (addr: 0) to scope level 1
> Insert `mod` (addr: 1) to scope level 1
IDENT (name=num, address=0)
INT_LIT 0
LES
IF
> Create symbol table (scope level 2)
IDENT (name=num, address=0)
IDENT (name=num, address=0)
INT_LIT 1
NEG
MUL
IDENT (name=mod, address=-1)
DIV
INT_LIT 1
ADD
IDENT (name=mod, address=-1)
MUL
ADD
RETURN

> Dump symbol table (scope level: 2)
Index     Name                Type      Addr      Lineno    Func_sig  
IDENT (name=num, address=0)
IDENT (name=mod, address=-1)
REM
RETURN

> Dump symbol table (scope level: 1)
Index     Name                Type      Addr      Lineno    Func_sig  
0         num                 int       0         1         -         
1         mod                 int       1         1         -         
func: nothing_function
> Insert `nothing_function` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `s` (addr: 2) to scope level 1
IDENT (name=s, address=2)
IDENT (name=endl, address=-1)
cout string string
INT_LIT 1000000007
INT_LIT 99824353
IDENT (name=mod, address=-1)
call: check(IILjava/lang/String;B)B
IDENT (name=endl, address=-1)
cout int string
INT_LIT 10
NEG
INT_LIT 2
IDENT (name=mod, address=-1)
call: check(IILjava/lang/String;B)B
IDENT (name=endl, address=-1)
cout int string
/home/share/hw2/input/subtask14-forall/testcase01.cpp:9:11: error:  syntax error
     9 |    return; 
       |          ^
Total lines: 9
